feat: expose unknown event visibility in admin
